--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-awesome-card-io": "^0.8.2",
+    "react-native-camera": "^3.19.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "^1.5.6",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "^0.7.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "7.4.3",
+    "react-native-webview": "^7.4.3",
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
     "react-navigation-tabs": "~2.6.2"
