--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,9 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 dependencies {
+    implementation project(':react-native-camera')
+    implementation project(':react-native-webview')
+    implementation project(':react-native-awesome-card-io')
     implementation project(':react-native-screens')
     implementation project(':react-native-reanimated')
     implementation project(':react-native-gesture-handler')
